fix(mobile): smaller viewport rules  and secondary-navigation visibility

--- a/src/components/structure/interacting/search-literature-references/search-literature-references.scss
+++ b/src/components/structure/interacting/search-literature-references/search-literature-references.scss
@@ -137,7 +137,7 @@
 }
 
 @media screen and (max-width: $vp-medium) {
-  .search {
+  .search-literature-references {
     width: auto;
     padding: $s $m $l $m;
 
