--- a/src/components/structure/interacting/search-works/search-works.scss
+++ b/src/components/structure/interacting/search-works/search-works.scss
@@ -135,7 +135,7 @@
 }
 
 @media screen and (max-width: $vp-medium) {
-  .search {
+  .search-works {
     width: auto;
     padding: $s $m $l $m;
 
